opam-version: "1.2"
name: "codept"
version: "0.10.2"
author: "octachron <octa@polychoron.fr>"
maintainer: "octachron <octa@polychoron.fr>"
homepage: "https://github.com/Octachron/codept"
bug-reports: "https://github.com/Octachron/codept/issues"
license: "gpl-3"
dev-repo: "https://github.com/Octachron/codept.git"
build: [
  ["./configure" "--%{ocamlbuild:enable}%-ocamlbuild" "--%{dune:enable}%-dune"]
  [make "all"]
]
build-test: [
  [make "tests"]
]
build-doc: [
  [make "docs"]
]
depopts:["ocamlbuild"]
depends: []
available: [ ocaml-version >= "4.03.0" ]
