(executable
  (name run) (modules Run)
  (libraries unix codept_lib zipper bundled)
)

(executable
  (name serialization) (modules Serialization)
  (libraries unix codept_lib)
)

(executable
  (name integrated) (modules Integrated)
  (libraries unix codept_lib)
)

(alias
 (name   runtest)
 (action (run %{exe:run.exe} ../../.. ))
 )

(alias
 (name   runtest)
 (action (run %{exe:serialization.exe}))
)


(alias
 (name   runtest)
 (deps ../full/codept.exe)
 (action (run %{exe:integrated.exe}))
)
