(executable (name step_by_step) (modules Step_by_step)
  (libraries bundled)
)


(executable
  (name run) (modules Run)
  (libraries unix codept_lib bundled)
)

(executable
  (name serialization) (modules Serialization)
  (libraries unix codept_lib)
)

(executable
  (name integrated) (modules Integrated)
  (libraries unix codept_lib)
)

(test
   (package codept-lib)
   (name bundle_sync)
   (modules Bundle_sync)
   (libraries bundled bundle_refs codept_lib)
)

(rule
 (alias   runtest)
 (package codept-lib)
 (deps run.exe)
 (action (run %{exe:run.exe} ../../.. ))
)

(rule
 (alias   runtest)
 (package codept-lib)
 (deps run.exe)
 (action (run %{exe:serialization.exe}))
)


(rule
 (alias   runtest)
 (package codept)
 (deps ../full/codept.exe step_by_step.exe)
 (action (run %{exe:integrated.exe}))
)
